--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,42 @@ header {
     background-color: var(--cor-hover);
 }
 
-/* Main Section */
+/* Form Section */
+
+form {
+    display: flex;
+    flex-direction: column;
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+
+form label {
+    margin: 10px 0 5px;
+    font-weight: bold;
+}
+
+form input, textarea {
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 100%;
+}
+
+form button {
+    padding: 10px;
+    background-color: #4a90e2;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color: #4a90e2;
+}
+
 /* Main Section */
 main {
     flex: 1; /* Faz o main ocupar o espaço disponível */
@@ -260,6 +295,11 @@ footer {
     color: var(--cor-texto);
     padding: 20px 40px;
     position: relative;
+}
+
+.social-icons a img {
+    width: 50px;
+    height: 50px;
 }
 
 .footer-container {
